--- a/portfolio.html
+++ b/portfolio.html
@@ -68,9 +68,13 @@
       </div>
       <div class="container">
         <ul class="projects">
-          <li class="item">
+         <li class="item">
             <div class="projects-card">
-              <img src="./img/portfolio1.jpg" alt="веб-сайт" width="370" />
+              <img src="./img/portfolio1.jpg" alt="веб-сайт" width="370"/>
+              <div class="card-text">
+                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+              </div>
               <div class="portfolio-card">
                 <h2 class="section-project">Технокряк</h2>
                 <p class="project-text">Веб-сайт</p>
@@ -80,6 +84,10 @@
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio2.jpg" alt="постер з баскетболістами" width="370" />
+              <div class="card-text">
+                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+              </div>
             <div class="portfolio-card">
               <h2 class="section-project">Постер New Orlean vs Golden Star</h2>
               <p class="project-text">Дизайн</p>
@@ -89,6 +97,10 @@
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio3.jpg" alt="емблема ресторану" width="370" />
+              <div class="card-text">
+                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+              </div>
             <div class="portfolio-card">
               <h2 class="section-project">Ресторан Seafood</h2>
               <p class="project-text">Додаток</p>
@@ -98,6 +110,10 @@
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio4.jpg" alt="чорні навушники" width="370" />
+              <div class="card-text">
+                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+              </div>
             <div class="portfolio-card">
               <h2 class="section-project">Проєкт Prime</h2>
               <p class="project-text">Маркетинг</p>
@@ -107,6 +123,10 @@
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio5.jpg" alt="дві коробки" width="370" />
+              <div class="card-text">
+                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+              </div>
             <div class="portfolio-card">
               <h2 class="section-project">Проєкт Boxes</h2>
               <p class="project-text">Додаток</p>
@@ -116,6 +136,10 @@
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio6.jpg" alt="монітор комп'ютера" width="370" />
+              <div class="card-text">
+                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+              </div>
             <div class="portfolio-card">
               <h2 class="section-project">Inspiration has no Borders</h2>
               <p class="project-text">Веб-сайт</p>
@@ -125,6 +149,10 @@
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio7.jpg" alt="розгорнутий журнал" width="370" />
+              <div class="card-text">
+                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+              </div>
             <div class="portfolio-card">
               <h2 class="section-project">Видання Limited Edition</h2>
               <p class="project-text">Дизайн</p>
@@ -134,6 +162,10 @@
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio8.jpg" alt="бірка з надписом label tag" width="370" />
+              <div class="card-text">
+                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+              </div>
             <div class="portfolio-card">
               <h2 class="section-project">Проєкт LAB</h2>
               <p class="project-text">Маркетинг</p>
@@ -143,6 +175,10 @@
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio9.jpg" alt="руки працюють на ноутбуці" width="370" />
+              <div class="card-text">
+                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+              </div>
             <div class="portfolio-card">
               <h2 class="section-project">Growing Business</h2>
               <p class="project-text">Додаток</p>
