--- a/index.html
+++ b/index.html
@@ -97,17 +97,26 @@
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="what-we-do">
             <li class="item">
-              <img src="img/box1.jpg" alt="програміст працює за комп'ютером" width="370" />
+              <div class="what-we-do-card">
+                <img src="img/box1.jpg" alt="програміст працює за комп'ютером" width="370" />
+                <p class="what-we-do-description">Десктопні додатки</p>
+              </div>
             </li>
             <li class="item">
-              <img src="img/box2.jpg" alt="дизайнер розробляє мобільний додаток" width="370" />
+              <div class="what-we-do-card">
+                <img src="img/box2.jpg" alt="дизайнер розробляє мобільний додаток" width="370" />
+                <p class="what-we-do-description">Мобільні додатки</p>
+              </div>
             </li>
             <li class="item">
-              <img
-                src="img/box3.jpg"
-                alt="веб-дизайнер обирає колір графіки у планшеті"
-                width="370"
-              />
+              <div class="what-we-do-card">
+                <img
+                  src="img/box3.jpg"
+                  alt="веб-дизайнер обирає колір графіки у планшеті"
+                  width="370"
+                />
+                <p class="what-we-do-description">Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
         </div>
