--- a/portfolio.html
+++ b/portfolio.html
@@ -72,8 +72,8 @@
             <div class="projects-card">
               <img src="./img/portfolio1.jpg" alt="веб-сайт" width="370"/>
               <div class="card-text">
-                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="portfolio-card">
                 <h2 class="section-project">Технокряк</h2>
