--- a/index.html
+++ b/index.html
@@ -381,8 +381,12 @@
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" data-modal-close>close</button>
-        <h2>Залиште свої дані, ми вам передзвонимо</h2>
+        <button class="modal-button" type="button" data-modal-close>
+          <svg class="modal-close" width="18px" height="18px">
+            <use href="./img/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <!-- <h2>Залиште свої дані, ми вам передзвонимо</h2> -->
       </div>
     </div>
     <script src="./js/modal.js"></script>
