--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
         <ul class="projects">
          <li class="item">
             <div class="projects-card">
-              <img class="portfolio-project" src="./img/portfolio1.jpg" alt="веб-сайт" width="370"/>
+              <img src="./img/portfolio1.jpg" alt="веб-сайт" width="370"/>
               <div class="card-text">
                 <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
