--- a/portfolio.html
+++ b/portfolio.html
@@ -68,123 +68,122 @@
       </div>
       <div class="container">
         <ul class="projects">
-         <li class="item">
+          <li class="item">
             <div class="projects-card">
-              <img src="./img/portfolio1.jpg" alt="веб-сайт" width="370"/>
-              <div class="card-text">
-                <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-              </div>
-              <div class="portfolio-card">
-                <h2 class="section-project">Технокряк</h2>
-                <p class="project-text">Веб-сайт</p>
-              </div>
+              <img src="./img/portfolio1.jpg" alt="веб-сайт" width="370" class="portfolio-image" />
+              <p class="card-text">
+                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+              </p>
+            </div>
+            <div class="portfolio-card">
+              <h2 class="section-project">Технокряк</h2>
+              <p class="project-text">Веб-сайт</p>
             </div>
           </li>
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio2.jpg" alt="постер з баскетболістами" width="370" />
-              <div class="card-text">
+              <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </div>
+              </p>
+            </div>
             <div class="portfolio-card">
               <h2 class="section-project">Постер New Orlean vs Golden Star</h2>
               <p class="project-text">Дизайн</p>
-            </div>
             </div>
           </li>
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio3.jpg" alt="емблема ресторану" width="370" />
-              <div class="card-text">
+              <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </div>
+              </p>
+            </div>
             <div class="portfolio-card">
               <h2 class="section-project">Ресторан Seafood</h2>
               <p class="project-text">Додаток</p>
-            </div>
             </div>
           </li>
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio4.jpg" alt="чорні навушники" width="370" />
-              <div class="card-text">
+              <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </div>
+              </p>
+            </div>
             <div class="portfolio-card">
               <h2 class="section-project">Проєкт Prime</h2>
               <p class="project-text">Маркетинг</p>
-            </div>
             </div>
           </li>
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio5.jpg" alt="дві коробки" width="370" />
-              <div class="card-text">
+              <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </div>
+              </p>
+            </div>
             <div class="portfolio-card">
               <h2 class="section-project">Проєкт Boxes</h2>
               <p class="project-text">Додаток</p>
-            </div>
             </div>
           </li>
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio6.jpg" alt="монітор комп'ютера" width="370" />
-              <div class="card-text">
+              <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </div>
+              </p>
+            </div>
             <div class="portfolio-card">
               <h2 class="section-project">Inspiration has no Borders</h2>
               <p class="project-text">Веб-сайт</p>
-            </div>
             </div>
           </li>
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio7.jpg" alt="розгорнутий журнал" width="370" />
-              <div class="card-text">
+              <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </div>
+              </p>
+            </div>
             <div class="portfolio-card">
               <h2 class="section-project">Видання Limited Edition</h2>
               <p class="project-text">Дизайн</p>
-            </div>
             </div>
           </li>
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio8.jpg" alt="бірка з надписом label tag" width="370" />
-              <div class="card-text">
+              <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </div>
+              </p>
+            </div>
             <div class="portfolio-card">
               <h2 class="section-project">Проєкт LAB</h2>
               <p class="project-text">Маркетинг</p>
-            </div>
             </div>
           </li>
           <li class="item">
             <div class="projects-card">
               <img src="./img/portfolio9.jpg" alt="руки працюють на ноутбуці" width="370" />
-              <div class="card-text">
+              <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </div>
+              </p>
+            </div>
             <div class="portfolio-card">
               <h2 class="section-project">Growing Business</h2>
               <p class="project-text">Додаток</p>
             </div>
-            </div>
-            
           </li>
         </ul>
       </div>
