--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
         <ul class="projects">
           <li class="item">
             <div class="projects-card">
-              <img src="./img/portfolio1.jpg" alt="веб-сайт" width="370" class="portfolio-image" />
+              <a href="#"><img src="./img/portfolio1.jpg" alt="веб-сайт" width="370" class="portfolio-image" /></a>
               <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -83,7 +83,7 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <img src="./img/portfolio2.jpg" alt="постер з баскетболістами" width="370" />
+              <a href="#"><img src="./img/portfolio2.jpg" alt="постер з баскетболістами" width="370" /></a>
               <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -96,7 +96,7 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <img src="./img/portfolio3.jpg" alt="емблема ресторану" width="370" />
+              <a href="#"><img src="./img/portfolio3.jpg" alt="емблема ресторану" width="370" /></a>
               <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -109,7 +109,7 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <img src="./img/portfolio4.jpg" alt="чорні навушники" width="370" />
+              <a href="#"><img src="./img/portfolio4.jpg" alt="чорні навушники" width="370" /></a>
               <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -122,7 +122,7 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <img src="./img/portfolio5.jpg" alt="дві коробки" width="370" />
+              <a href="#"><img src="./img/portfolio5.jpg" alt="дві коробки" width="370" /></a>
               <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -135,7 +135,7 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <img src="./img/portfolio6.jpg" alt="монітор комп'ютера" width="370" />
+              <a href="#"><img src="./img/portfolio6.jpg" alt="монітор комп'ютера" width="370" /></a>
               <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -148,7 +148,7 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <img src="./img/portfolio7.jpg" alt="розгорнутий журнал" width="370" />
+              <a href="#"><img src="./img/portfolio7.jpg" alt="розгорнутий журнал" width="370" /></a>
               <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -161,7 +161,7 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <img src="./img/portfolio8.jpg" alt="бірка з надписом label tag" width="370" />
+              <a href="#"><img src="./img/portfolio8.jpg" alt="бірка з надписом label tag" width="370" /></a>
               <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
@@ -174,7 +174,7 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <img src="./img/portfolio9.jpg" alt="руки працюють на ноутбуці" width="370" />
+              <a href="#"><img src="./img/portfolio9.jpg" alt="руки працюють на ноутбуці" width="370" /></a>
               <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
