--- a/portfolio.html
+++ b/portfolio.html
@@ -70,11 +70,10 @@
         <ul class="projects">
           <li class="item">
             <div class="projects-card">
-              <a href="#"><img src="./img/portfolio1.jpg" alt="веб-сайт" width="370" class="portfolio-image" /></a>
-              <p class="card-text">
+              <a href="#" class="link-overlay"><img src="./img/portfolio1.jpg" alt="веб-сайт" width="370" /><p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </p>
+              </p></a>
             </div>
             <div class="portfolio-card">
               <h2 class="section-project">Технокряк</h2>
@@ -83,11 +82,10 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <a href="#"><img src="./img/portfolio2.jpg" alt="постер з баскетболістами" width="370" /></a>
-              <p class="card-text">
+              <a href="#" class="link-overlay"><img src="./img/portfolio2.jpg" alt="постер з баскетболістами" width="370" /><p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </p>
+              </p></a>
             </div>
             <div class="portfolio-card">
               <h2 class="section-project">Постер New Orlean vs Golden Star</h2>
@@ -96,11 +94,10 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <a href="#"><img src="./img/portfolio3.jpg" alt="емблема ресторану" width="370" /></a>
-              <p class="card-text">
+              <a href="#" class="link-overlay"><img src="./img/portfolio3.jpg" alt="емблема ресторану" width="370" /><p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </p>
+              </p></a>
             </div>
             <div class="portfolio-card">
               <h2 class="section-project">Ресторан Seafood</h2>
@@ -109,11 +106,10 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <a href="#"><img src="./img/portfolio4.jpg" alt="чорні навушники" width="370" /></a>
-              <p class="card-text">
+              <a href="#" class="link-overlay"><img src="./img/portfolio4.jpg" alt="чорні навушники" width="370" /> <p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </p>
+              </p></a>
             </div>
             <div class="portfolio-card">
               <h2 class="section-project">Проєкт Prime</h2>
@@ -122,11 +118,10 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <a href="#"><img src="./img/portfolio5.jpg" alt="дві коробки" width="370" /></a>
-              <p class="card-text">
+              <a href="#" class="link-overlay"><img src="./img/portfolio5.jpg" alt="дві коробки" width="370" /><p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </p>
+              </p></a>
             </div>
             <div class="portfolio-card">
               <h2 class="section-project">Проєкт Boxes</h2>
@@ -135,11 +130,10 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <a href="#"><img src="./img/portfolio6.jpg" alt="монітор комп'ютера" width="370" /></a>
-              <p class="card-text">
+              <a href="#" class="link-overlay"><img src="./img/portfolio6.jpg" alt="монітор комп'ютера" width="370" /><p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </p>
+              </p></a>
             </div>
             <div class="portfolio-card">
               <h2 class="section-project">Inspiration has no Borders</h2>
@@ -148,11 +142,10 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <a href="#"><img src="./img/portfolio7.jpg" alt="розгорнутий журнал" width="370" /></a>
-              <p class="card-text">
+              <a href="#" class="link-overlay"><img src="./img/portfolio7.jpg" alt="розгорнутий журнал" width="370" /><p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </p>
+              </p></a>
             </div>
             <div class="portfolio-card">
               <h2 class="section-project">Видання Limited Edition</h2>
@@ -161,11 +154,10 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <a href="#"><img src="./img/portfolio8.jpg" alt="бірка з надписом label tag" width="370" /></a>
-              <p class="card-text">
+              <a href="#" class="link-overlay"><img src="./img/portfolio8.jpg" alt="бірка з надписом label tag" width="370" /><p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </p>
+              </p></a>
             </div>
             <div class="portfolio-card">
               <h2 class="section-project">Проєкт LAB</h2>
@@ -174,11 +166,10 @@
           </li>
           <li class="item">
             <div class="projects-card">
-              <a href="#"><img src="./img/portfolio9.jpg" alt="руки працюють на ноутбуці" width="370" /></a>
-              <p class="card-text">
+              <a href="#" class="link-overlay"><img src="./img/portfolio9.jpg" alt="руки працюють на ноутбуці" width="370" /><p class="card-text">
                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
                 це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-              </p>
+              </p></a>
             </div>
             <div class="portfolio-card">
               <h2 class="section-project">Growing Business</h2>
